-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 16.0.0-beta1
-
None
-
2f7eb65a3 (16.0), f626cfd09 (16.0)
Preconditions:
All 'QML Language Server' settings are disabled.
Steps to reproduce:
1. Open and configure 'Calqlatr' example
2. Open 'Main.qml' file
3. Enable 'Allow versions below Qt 6.8' setting in preferences
4. Click OK
5. Repeat steps 3-4 for all 'QML Language Server' settings
6. Click 'QML Language Server' icon in the editor
Result:
Menu contains several items with the same text.
- resulted from
-
QTCREATORBUG-32338 Create a RTA test for more complicated Qt Quick example
-
- Closed
-