src/plugins/languageclient/client.cpp
@@ -1740,7 +1740,22 @@ bool ClientPrivate::reset()
 void Client::setError(const QString &message)
 {
     log(message);
-    d->setState(d->m_state < Initialized ? FailedToInitialize : Error);
+    switch (d->m_state) {
+    case Uninitialized:
+    case InitializeRequested:
+    case FailedToInitialize:
+        d->setState(FailedToInitialize);
+        return;
+    case Initialized:
+    case Error:
+        d->setState(Error);
+        return;
+    case ShutdownRequested:
+    case FailedToShutdown:
+    case Shutdown:
+        d->setState(FailedToShutdown);
+        return;
+    }
 }
 
 ProgressManager *Client::progressManager()
